--- a/clean.css
+++ b/clean.css
@@ -1,33 +1,49 @@
+body {
+  max-width: 120ch;
+  margin: 0 auto;
+}
+
 .cards {
-        display: flex;
-        flex-wrap: wrap;
-      }
-      .cards > li {
-        /* display: ; */
-        border: 2px black solid;
-        padding: 4px;
-        text-align: center;
-        list-style-type: none;
-        flex: 1 1 content;
-        width: max-content;
-        min-width: 25%;
-      }
-      .cards > li > ul {
-        text-align: left;
-      }
-      /* have iframe match card width and keep aspect ratio */
-      .container {
-        position: relative;
-        width: 100%;
-        padding-bottom: 56.25%;
-      }
-      .container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-      #projects {
-        text-align: center;
-      }
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 1em;
+}
+
+.full-width {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+}
+
+.cards>li {
+  /* display: ; */
+  border: 2px black solid;
+  padding: 4px;
+  text-align: center;
+  list-style-type: none;
+  flex: 1 1 content;
+  width: max-content;
+  min-width: 25%;
+}
+
+.cards>li>ul {
+  text-align: left;
+}
+
+/* have iframe match card width and keep aspect ratio */
+.container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#projects {
+  text-align: center;
+}
