--- a/src/static/clean.css
+++ b/src/static/clean.css
@@ -15,7 +15,6 @@ body {
 }
 
 .cards > li {
-	/* display: ; */
 	border: 2px black solid;
 	padding: 4px;
 	text-align: center;
@@ -45,22 +44,36 @@ body {
 }
 
 /* YouTube thumbnail styling */
-.youtube-thumbnail-link {
+.youtube-thumbnail-figure {
 	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+}
+
+.youtube-thumbnail-link {
+	position: relative;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	display: block;
+	overflow: hidden;
 }
-
+.youtube-thumbnail-caption {
+	text-decoration: underline;
+}
 .youtube-thumbnail-img {
-	position: absolute;
-	top: 0;
-	left: 0;
+	flex: 1;
 	width: 100%;
-	height: 100%;
 	object-fit: cover;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 /* Interactive section styling */
